{
  "version": 4,
  "terraform_version": "1.2.3",
  "serial": 353,
  "lineage": "4df58d1c-a8f3-bc17-233d-67c95f522e77",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_alb_target_group_attachment",
      "name": "tgattachment",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:972976761028:targetgroup/TargetGroup/4711df526a0a51a4-20220719152657656100000003",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:972976761028:targetgroup/TargetGroup/4711df526a0a51a4",
            "target_id": "i-0ebd1dcdbc6804449"
          },
          "dependencies": [
            "aws_instance.instance",
            "aws_lb_target_group.tg",
            "aws_security_group.sg",
            "aws_subnet.public_subnet",
            "aws_vpc.custom_vpc",
            "data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:972976761028:targetgroup/TargetGroup/4711df526a0a51a4-20220719152657321100000001",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:972976761028:targetgroup/TargetGroup/4711df526a0a51a4",
            "target_id": "i-067d10817fcee8a0f"
          },
          "dependencies": [
            "aws_instance.instance",
            "aws_lb_target_group.tg",
            "aws_security_group.sg",
            "aws_subnet.public_subnet",
            "aws_vpc.custom_vpc",
            "data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:972976761028:targetgroup/TargetGroup/4711df526a0a51a4-20220719152657562400000002",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:972976761028:targetgroup/TargetGroup/4711df526a0a51a4",
            "target_id": "i-086b7dfa1591b4531"
          },
          "dependencies": [
            "aws_instance.instance",
            "aws_lb_target_group.tg",
            "aws_security_group.sg",
            "aws_subnet.public_subnet",
            "aws_vpc.custom_vpc",
            "data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b33265cc6c4cb821",
            "association_id": "eipassoc-0637c4aef8cb2d338",
            "domain": "vpc",
            "id": "eipalloc-0b33265cc6c4cb821",
            "instance": "i-0ebd1dcdbc6804449",
            "network_border_group": "us-east-1",
            "network_interface": "eni-07bc4352c118abcd0",
            "private_dns": "ip-10-0-0-135.ec2.internal",
            "private_ip": "10.0.0.135",
            "public_dns": "ec2-52-1-176-76.compute-1.amazonaws.com",
            "public_ip": "52.1.176.76",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "EIP-0"
            },
            "tags_all": {
              "Name": "EIP-0"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_instance.instance",
            "aws_security_group.sg",
            "aws_subnet.public_subnet",
            "aws_vpc.custom_vpc",
            "data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e44f3abf257b6237",
            "association_id": "eipassoc-0c5d473b7146a7392",
            "domain": "vpc",
            "id": "eipalloc-0e44f3abf257b6237",
            "instance": "i-067d10817fcee8a0f",
            "network_border_group": "us-east-1",
            "network_interface": "eni-00c0e344c70a6c7d3",
            "private_dns": "ip-10-0-29-68.ec2.internal",
            "private_ip": "10.0.29.68",
            "public_dns": "ec2-107-23-43-126.compute-1.amazonaws.com",
            "public_ip": "107.23.43.126",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "EIP-1"
            },
            "tags_all": {
              "Name": "EIP-1"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_instance.instance",
            "aws_security_group.sg",
            "aws_subnet.public_subnet",
            "aws_vpc.custom_vpc",
            "data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0dc2e2a80be1f882e",
            "association_id": "eipassoc-0d63997155a071a31",
            "domain": "vpc",
            "id": "eipalloc-0dc2e2a80be1f882e",
            "instance": "i-086b7dfa1591b4531",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0aa71752918ffbf43",
            "private_dns": "ip-10-0-44-62.ec2.internal",
            "private_ip": "10.0.44.62",
            "public_dns": "ec2-44-208-19-220.compute-1.amazonaws.com",
            "public_ip": "44.208.19.220",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "EIP-2"
            },
            "tags_all": {
              "Name": "EIP-2"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_instance.instance",
            "aws_security_group.sg",
            "aws_subnet.public_subnet",
            "aws_vpc.custom_vpc",
            "data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-087c17d1fe0178315",
            "arn": "arn:aws:ec2:us-east-1:972976761028:instance/i-0ebd1dcdbc6804449",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0ebd1dcdbc6804449",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "Keypair01",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-07bc4352c118abcd0",
            "private_dns": "ip-10-0-0-135.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.135",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-02ffc3e9680060557",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0305405b46fe1cac6"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0e844d3ab762b9f74",
            "tags": {
              "CreatedBy": "Didier Vanegas",
              "Environment": "Test",
              "Name": "Crash_Server_0"
            },
            "tags_all": {
              "CreatedBy": "Didier Vanegas",
              "Environment": "Test",
              "Name": "Crash_Server_0"
            },
            "tenancy": "default",
            "timeouts": {
              "create": "10m"
            },
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0305405b46fe1cac6"
            ]
          },
          "dependencies": [
            "aws_security_group.sg",
            "aws_subnet.public_subnet",
            "aws_vpc.custom_vpc",
            "data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-087c17d1fe0178315",
            "arn": "arn:aws:ec2:us-east-1:972976761028:instance/i-067d10817fcee8a0f",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-067d10817fcee8a0f",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "Keypair01",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-00c0e344c70a6c7d3",
            "private_dns": "ip-10-0-29-68.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.29.68",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-021e27fb23fac4304",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0305405b46fe1cac6"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-053f304ca67aaf205",
            "tags": {
              "CreatedBy": "Didier Vanegas",
              "Environment": "Test",
              "Name": "Crash_Server_1"
            },
            "tags_all": {
              "CreatedBy": "Didier Vanegas",
              "Environment": "Test",
              "Name": "Crash_Server_1"
            },
            "tenancy": "default",
            "timeouts": {
              "create": "10m"
            },
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0305405b46fe1cac6"
            ]
          },
          "dependencies": [
            "aws_security_group.sg",
            "aws_subnet.public_subnet",
            "aws_vpc.custom_vpc",
            "data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-087c17d1fe0178315",
            "arn": "arn:aws:ec2:us-east-1:972976761028:instance/i-086b7dfa1591b4531",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-086b7dfa1591b4531",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "Keypair01",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0aa71752918ffbf43",
            "private_dns": "ip-10-0-44-62.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.44.62",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-09df909c6b763ae05",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0305405b46fe1cac6"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-015a0db7faff4954b",
            "tags": {
              "CreatedBy": "Didier Vanegas",
              "Environment": "Test",
              "Name": "Crash_Server_2"
            },
            "tags_all": {
              "CreatedBy": "Didier Vanegas",
              "Environment": "Test",
              "Name": "Crash_Server_2"
            },
            "tenancy": "default",
            "timeouts": {
              "create": "10m"
            },
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0305405b46fe1cac6"
            ]
          },
          "dependencies": [
            "aws_security_group.sg",
            "aws_subnet.public_subnet",
            "aws_vpc.custom_vpc",
            "data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:972976761028:internet-gateway/igw-044f4b53ef6d2dfa4",
            "id": "igw-044f4b53ef6d2dfa4",
            "owner_id": "972976761028",
            "tags": {
              "Name": "Internet-Gateway"
            },
            "tags_all": {
              "Name": "Internet-Gateway"
            },
            "vpc_id": "vpc-014b1111503b5368c"
          },
          "dependencies": [
            "aws_vpc.custom_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:972976761028:loadbalancer/app/ALB/8e64dc5d94abdecf",
            "arn_suffix": "app/ALB/8e64dc5d94abdecf",
            "desync_mitigation_mode": "defensive",
            "dns_name": "ALB-297235296.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:972976761028:loadbalancer/app/ALB/8e64dc5d94abdecf",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "ALB",
            "security_groups": [
              "sg-0305405b46fe1cac6"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-015a0db7faff4954b"
              },
              {
                "subnet_id": "subnet-053f304ca67aaf205"
              },
              {
                "subnet_id": "subnet-0e844d3ab762b9f74"
              }
            ],
            "subnets": [
              "subnet-015a0db7faff4954b",
              "subnet-053f304ca67aaf205",
              "subnet-0e844d3ab762b9f74"
            ],
            "vpc_id": "vpc-014b1111503b5368c",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.sg",
            "aws_subnet.public_subnet",
            "aws_vpc.custom_vpc",
            "data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "front_end",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:972976761028:listener/app/ALB/8e64dc5d94abdecf/aa873e3e4985768c",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:972976761028:targetgroup/TargetGroup/4711df526a0a51a4",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:972976761028:listener/app/ALB/8e64dc5d94abdecf/aa873e3e4985768c",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:972976761028:loadbalancer/app/ALB/8e64dc5d94abdecf",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.lb",
            "aws_lb_target_group.tg",
            "aws_security_group.sg",
            "aws_subnet.public_subnet",
            "aws_vpc.custom_vpc",
            "data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:972976761028:targetgroup/TargetGroup/4711df526a0a51a4",
            "arn_suffix": "targetgroup/TargetGroup/4711df526a0a51a4",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:972976761028:targetgroup/TargetGroup/4711df526a0a51a4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "TargetGroup",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-014b1111503b5368c"
          },
          "dependencies": [
            "aws_vpc.custom_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-044f4b53ef6d2dfa4",
            "id": "r-rtb-037a57919e6a5b7f11080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-037a57919e6a5b7f1",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public_rt",
            "aws_vpc.custom_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:972976761028:route-table/rtb-037a57919e6a5b7f1",
            "id": "rtb-037a57919e6a5b7f1",
            "owner_id": "972976761028",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "Public-RouteTable"
            },
            "tags_all": {
              "Name": "Public-RouteTable"
            },
            "timeouts": null,
            "vpc_id": "vpc-014b1111503b5368c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.custom_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_rt_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04924e43ce3a0113e",
            "route_table_id": "rtb-037a57919e6a5b7f1",
            "subnet_id": "subnet-0e844d3ab762b9f74"
          },
          "dependencies": [
            "aws_route_table.public_rt",
            "aws_subnet.public_subnet",
            "aws_vpc.custom_vpc",
            "data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-057af646f0123c90e",
            "route_table_id": "rtb-037a57919e6a5b7f1",
            "subnet_id": "subnet-053f304ca67aaf205"
          },
          "dependencies": [
            "aws_route_table.public_rt",
            "aws_subnet.public_subnet",
            "aws_vpc.custom_vpc",
            "data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f7af64d000a9b881",
            "route_table_id": "rtb-037a57919e6a5b7f1",
            "subnet_id": "subnet-015a0db7faff4954b"
          },
          "dependencies": [
            "aws_route_table.public_rt",
            "aws_subnet.public_subnet",
            "aws_vpc.custom_vpc",
            "data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:972976761028:security-group/sg-0305405b46fe1cac6",
            "description": "Allow TLS inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "for all outgoing traffics",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0305405b46fe1cac6",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Ingress rules for port 22",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Ingress rules for port 443",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Ingress rules for port 80",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "CustomSG",
            "name_prefix": "",
            "owner_id": "972976761028",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "AWS security group dynamic block"
            },
            "tags_all": {
              "Name": "AWS security group dynamic block"
            },
            "timeouts": null,
            "vpc_id": "vpc-014b1111503b5368c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.custom_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:972976761028:subnet/subnet-0e844d3ab762b9f74",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e844d3ab762b9f74",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "972976761028",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public-Subnet-0"
            },
            "tags_all": {
              "Name": "Public-Subnet-0"
            },
            "vpc_id": "vpc-014b1111503b5368c"
          },
          "dependencies": [
            "aws_vpc.custom_vpc",
            "data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:972976761028:subnet/subnet-053f304ca67aaf205",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.16.0/20",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-053f304ca67aaf205",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "972976761028",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public-Subnet-1"
            },
            "tags_all": {
              "Name": "Public-Subnet-1"
            },
            "vpc_id": "vpc-014b1111503b5368c"
          },
          "dependencies": [
            "aws_vpc.custom_vpc",
            "data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:972976761028:subnet/subnet-015a0db7faff4954b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.32.0/20",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-015a0db7faff4954b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "972976761028",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public-Subnet-2"
            },
            "tags_all": {
              "Name": "Public-Subnet-2"
            },
            "vpc_id": "vpc-014b1111503b5368c"
          },
          "dependencies": [
            "aws_vpc.custom_vpc",
            "data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "custom_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:972976761028:vpc/vpc-014b1111503b5368c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0b3d83f26a5b80ab5",
            "default_route_table_id": "rtb-06b382aed7a3ee820",
            "default_security_group_id": "sg-0438237f5489b90f4",
            "dhcp_options_id": "dopt-001e05d5e08f39f10",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-014b1111503b5368c",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-06b382aed7a3ee820",
            "owner_id": "972976761028"
          }
        }
      ]
    }
  ]
}